fix syntax error on mobile.sass at line 40

--- a/client/sass/mobile.sass
+++ b/client/sass/mobile.sass
@@ -37,10 +37,11 @@ $mobile: "(min-width: 310px) and (max-width: 750px)";
    margin-left: 0em
  .text-bottom
    margin-top: 20em
-  .status .status-form
-   width: 80%
-   margin-left: auto
-   margin-right: auto
+ .status
+   .status-form
+     width: 80%
+     margin-left: auto
+     margin-right: auto
  .margin-Row
    margin-right: auto
 @media #{$tablet}
@@ -51,7 +52,7 @@ $mobile: "(min-width: 310px) and (max-width: 750px)";
  .social-bar
    margin-top: 10px
    margin-bottom: -30px
-   height: 1em;
+   height: 1em
  .status
    height: 170px
  .withPadding
